force-app/main/default/objects/Stock_History__c/Stock_History__c.object-meta.xml
<CustomObject>
    <label>Stock History</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Stock History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stock History</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>