force-app/main/default/objects/Stock_History__c/fields/Ext_ID__c.field-meta.xml
<CustomField>
    <fullName>Ext_ID__c</fullName>
    <label>Ext. ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>