force-app/main/default/objects/Stock_History__c/fields/Opening_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Opening_Quantity__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Opening Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>