force-app/main/default/objects/Stock_History__c/fields/Replaced_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Replaced_Quantity__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Replaced Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>