force-app/main/default/objects/Stock_History__c/fields/Sold_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Sold_Quantity__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Sold Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>