force-app/main/default/objects/Stock_History__c/fields/Unsealed_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Unsealed_Quantity__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Unsealed Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>