force-app/main/default/objects/Stock_History__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Date__c</columns>
    <columns>Product__c</columns>
    <columns>Route__c</columns>
    <columns>Opening_Quantity__c</columns>
    <columns>Initial_Quantity__c</columns>
    <columns>Total_Quantity__c</columns>
    <columns>Available_Quantity__c</columns>
    <columns>Sold_Quantity__c</columns>
    <columns>Damaged_Quantity__c</columns>
    <columns>Free_Quantity__c</columns>
    <columns>Replaced_Quantity__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <columns>test__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>